--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
         "eslint-config-airbnb-typescript": "^17.1.0",
         "husky": "^8.0.3",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "react-router-dom": "^6.16.0"
     },
     "devDependencies": {
         "@types/react": "^18.2.15",
@@ -23,6 +24,7 @@
         "@typescript-eslint/eslint-plugin": "^6.7.4",
         "@typescript-eslint/parser": "^6.7.4",
         "@vitejs/plugin-react": "^4.0.3",
+        "autoprefixer": "^10.4.16",
         "eslint": "^8.51.0",
         "eslint-config-airbnb": "^19.0.4",
         "eslint-config-prettier": "^9.0.0",
@@ -32,7 +34,9 @@
         "eslint-plugin-react": "^7.33.2",
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.4.3",
+        "postcss": "^8.4.31",
         "prettier": "^3.0.3",
+        "tailwindcss": "^3.3.3",
         "typescript": "^5.0.2",
         "vite": "^4.4.5"
     },
