--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
     "private": true,
     "version": "0.0.0",
     "type": "module",
+    "author": "Lazar Veselinovic",
+    "engines": {
+        "node": ">=18"
+    },
     "scripts": {
         "dev": "vite",
         "build": "tsc && vite build",
