--- a/package.json
+++ b/package.json
@@ -15,6 +15,12 @@
     },
     "dependencies": {
         "-": "^0.0.1",
+        "@fortawesome/fontawesome-svg-core": "^6.4.2",
+        "@fortawesome/free-brands-svg-icons": "^6.4.2",
+        "@fortawesome/free-regular-svg-icons": "^6.4.2",
+        "@fortawesome/free-solid-svg-icons": "^6.4.2",
+        "@fortawesome/react-fontawesome": "^0.2.0",
+        "axios": "^1.5.1",
         "D": "^1.0.0",
         "eslint-config-airbnb-typescript": "^17.1.0",
         "husky": "^8.0.3",
@@ -24,6 +30,7 @@
         "react-router-dom": "^6.16.0"
     },
     "devDependencies": {
+        "@types/node": "^20.8.3",
         "@types/react": "^18.2.15",
         "@types/react-dom": "^18.2.7",
         "@typescript-eslint/eslint-plugin": "^6.7.4",
